test/types/range/hilde/countTypeError2.good
countTypeError2.chpl:12: error: can't apply '#' to a range with idxType int(8) using a count of type int(16)
countTypeError2.chpl:13: error: can't apply '#' to a range with idxType int(8) using a count of type int(32)
countTypeError2.chpl:14: error: can't apply '#' to a range with idxType int(8) using a count of type uint(16)
countTypeError2.chpl:15: error: can't apply '#' to a range with idxType int(8) using a count of type uint(32)
countTypeError2.chpl:16: error: can't apply '#' to a range with idxType int(16) using a count of type int(32)
countTypeError2.chpl:17: error: can't apply '#' to a range with idxType int(16) using a count of type uint(32)
countTypeError2.chpl:18: error: can't apply '#' to a range with idxType uint(8) using a count of type int(16)
countTypeError2.chpl:19: error: can't apply '#' to a range with idxType uint(8) using a count of type int(32)
countTypeError2.chpl:20: error: can't apply '#' to a range with idxType uint(8) using a count of type uint(16)
countTypeError2.chpl:21: error: can't apply '#' to a range with idxType uint(8) using a count of type uint(32)
countTypeError2.chpl:22: error: can't apply '#' to a range with idxType uint(16) using a count of type int(32)
countTypeError2.chpl:23: error: can't apply '#' to a range with idxType uint(16) using a count of type uint(32)
countTypeError2.chpl:24: error: can't apply '#' to a range with idxType uint(32) using a count of type int(64)
